# MrDamianOld

./: .gitignore  noxfile.py  pyproject.toml
mrdamian/: append.py  component.py  log.py  main.py  pipeline.py  recognize.py  recording.py  slot.py  translate.py  twitch.py
