[tool.poetry]
name = "mrdamian"
version = "0.1.0"
description = ""
authors = ["Yuniru Yuni <yuniruyuni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
twitchio = "^2.5.0"
deepl = "^1.11.0"
pywin32 = "^305"
# soundcard = "*"
numpy = "^1.24.0"
soundcard = "^0.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
